--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -44,11 +44,11 @@ What is _TravEzy_?
 
 _TravEzy_ is a desktop application with a command line interface (CLI) and is *perfect* for NUS students who love travelling as much as we do. With a CLI, you will be able to type in your commands much faster than similar applications which require you to keep using your mouse. Furthermore, since this is a desktop application, you do not need a web browser (like Chrome, Firefox, Internet Explorer, etc.) to start using _TravEzy_.
 
-TravEzy is perfect for:
+_TravEzy_ is perfect for:
 
-. Managing your busy calendar and finding the a good time to take that much needed holiday!
+. Managing your busy calendar and finding a good time to take that much needed holiday!
 
-. Creating the ideal itinerary for your trips :)
+. Creating an ideal itinerary for your trips :)
 
 . Tracking your expenses during your trip, so that you have enough money left for the trip home
 
@@ -58,7 +58,7 @@ TravEzy is perfect for:
 
 
 What are you waiting for? Hop on to this user guide and we will
-travel to +++<u>+++Section 2, “Quick Start”+++</u>+++ to start TravEzy 😊
+travel to +++<u>+++Section 2, “Quick Start”+++</u>+++ to start _TravEzy_ 😊
 
 == Quickstart
 
@@ -90,7 +90,7 @@ Excited to start using _TravEzy_? Read this section to find out how this documen
 
 === Structure of this Document
 
-There are *alot* of things that TravEzy can do. So, we have organised this document such that you can easily look for what *you* need.
+There are *a lot* of things that TravEzy can do. So, we have organised this document such that you can easily look for what *you* need.
 
 
 We've split up this guide into the different features of our application, namely:
@@ -126,7 +126,7 @@ Symbols and fanciful (okay, different) fonts are exciting, aren't they? Let's fi
 | The slash and letter (or word) before the _parameter_ is a _prefix_. It is used to separate the current _parameter_ from other _parameters_.
 
 | ``[m/MONTH]``
-| Square brackets imply that the the stated _prefix_ and _parameter_ are optional. (This means less typing! 😆)
+| Square brackets imply that the stated _prefix_ and _parameter_ are optional. (This means less typing! 😆)
 
 | 💡  
 | A light bulb indicates that the enclosed text is a tip.
@@ -140,7 +140,7 @@ Symbols and fanciful (okay, different) fonts are exciting, aren't they? Let's fi
 
 == Main
 
-Main is the welcome screen for _TravEzy_. From here, you can easily navigate to the other _pages_ (which contains the interface of the features): _calendar_, _itinerary_, _address book_, _financial tracker_, _diary_ and _achievements_. You can also the exit the application from here.
+Main is the welcome screen for _TravEzy_. From here, you can easily navigate to the other _pages_ (which contains the interface of the features): _calendar_, _itinerary_, _address book_, _financial tracker_, _diary_ and _achievements_. You can also exit the application from here.
 
 === Interface
 
