--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -184,20 +184,42 @@ Classes used by multiple components are in the `seedu.addressbook.commons` packa
 This section describes some noteworthy details on how certain features are implemented.
 
 // tag::transaction[]
-=== Transaction: `in` / `out` / `split` / `receive`
+=== Transaction: `in` / `out`
 
-The `Transaction` abstract class allows user to input income, expense or split commands into the PalPay.
+The `Transaction` abstract class allows user to input income and expense statements. Both `in` and `out` transactions requires the mandatory `Amount`, `Description` and `Date` fields to be appended. There is an optional `Category` field which can accept one or more input depending on the user specifications.
+The `in` transactions will increase the `BankAccount` balance amount whilst the `out` transactions will reduce the `BankAccount` balance amount.
 
 ==== Current Implementation
 
-`Transaction` is an abstract class which contains the default constructor and commonly used functions. `InTransaction` and `OutTransaction` extends the `Transaction` class.
-`Transaction` stores an *amount*, *date*, *description*, and a set of *categories*. This describes the variables a `Transaction` with the `BankAccount` will typically hold.
-`InTransaction` and `OutTransaction` implements `BankAccountOperation`.
+The sequence diagram below illustrates how PalPay handles the command input `in $/200 n/coke d/10102019`. The arguments are parsed into the logic component where the subsequent model objects are created.
+
+.Sequence diagram for executing an `InCommand`
+image::InSequenceDiagram.png[]
+
+The `in` and `out` transaction follows the same logic flow after they are parsed. The only difference is that the `handleBalance()` method called in the `BankAccount` results in an `addAmount` operation in the `inTransaction` and a `subtractAmount` operation in the `OutTransaction` class.
+
+`Transaction` is an abstract class which contains the default constructor and commonly used variables. `InTransaction` and `OutTransaction` extends the `Transaction` class as they typically store an *amount*, *date*, *description*, and a set of *categories*.
+A code snippet of the `Transaction` abstract class is shown below.
+
+```
+public abstract class Transaction {
+
+    protected Amount amount;
+    protected Date date;
+    protected Description description;
+    protected final Set<Category> categories = new HashSet<>();
+
+    public Transaction(Amount amount, Date date, Description description) {
+        this.amount = amount;
+        this.date = date;
+        this.description = description;
+    }
+```
+
 
 ==== Design Considerations
 
-Implementation of `Transaction` abstract class allows code reuse as different types of transactions depends on similar variables. +
-The balance in `BankAccount` is considered separate from the balance in `Ledger`, both being encompassed in `UserState`.
+The balance in `BankAccount` and the balance in `Ledger` are considered two separate identities, both being encompassed under the `UserState` class.
 Therefore user operations that deal with `BankAccount` implements the `BankAccountOperation` interface, while operations
 that deal with `Ledger` implements the `LedgerOperation` interface. +
 This allows us to achieve polymorphism by overloading methods in `Model` to handle the different operations correctly.
@@ -430,10 +452,13 @@ image::DeleteActivityDiagram.png[]
 
 ===== Aspect: Delete requires `TYPE+INDEX` as one of its parameter
 
-Implementation of `Transaction` abstract class allows code reuse as different types of transactions depends on similar variables.
-`inTransaction` and `outTransaction` can be referenced by making a call to `BankAccountOperation`,
-this `BankAccountOperation` is then passed as an argument to `Logic` components and multiple CRUD commands.
-This allows multiple transaction calls within the same method.
+* **Alternative 1 (current choice):** takes in `TYPE+INDEX` to decide whether to delete an item from Transaction, Budget, Ledger or Projection list. (e.g. `delete b1` deletes item index 1 from budget).
+** Pros: Requires lesser user steps to be taken before executing a `delete` command
+** Cons: Requires four unique lists to be created instead of 1. (e.g. the `UniqueTransactionList` stores Transaction items and the `UniqueBudgetList` to store Budget items).
+** For example, when a new command is executed, we must remember to delete both `HistoryManager` and `VersionedAddressBook`.
+* **Alternative 2:** Change to **Transaction** or **Budget** mode and keying in only index (e.g. `delete 1 ..`)
+** Pros: Requires only one unique list required to store both Transactions and Budgets.
+** Cons: Requires additional user step to switch between modes before executing a updating command.
 
 // end::delete[]
 
@@ -448,11 +473,11 @@ This `update` feature allows one or more fields of a Transaction or Budget to be
 
 ===== Aspect: Update requires `TYPE+INDEX` as one of its parameter
 
-* **Alternative 1 (current choice):** takes in `TYPE+INDEX` to decide whether to delete an item from Transaction or Budget list. (e.g. `delete b1` deletes item index 1 from budget).
+* **Alternative 1 (current choice):** takes in `TYPE+INDEX` to decide whether to update an item from Transaction, Budget or Projection list. (e.g. `delete b1` deletes item index 1 from budget).
 ** Pros: Requires lesser user steps to be taken before executing a `update` command
-** Cons: Requires two lists to be created instead of 1. The `UniqueTransactionList` stores Transaction items and `UniqueBudgetList` to store Budget items.
-For example, when a new command is executed, we must remember to update both `HistoryManager` and `VersionedAddressBook`.
-* **Alternative 2:** Change to **Transaction** or **Budget** mode and keying in only index (e.g. `update 1`)
+** Cons: Requires three unique lists to be utilized instead of 1. (e.g. the `UniqueTransactionList` stores Transaction items and the `UniqueBudgetList` to store Budget items).
+** For example, when a new command is executed, we must remember to update both `HistoryManager` and `VersionedAddressBook`.
+* **Alternative 2:** Change to **Transaction** or **Budget** mode and keying in only index (e.g. `update 1 ..`)
 ** Pros: Requires only one unique list required to store both Transactions and Budgets.
 ** Cons: Requires additional user step to switch between modes before executing a updating command.
 
